Fix nav menu centering
New logout button threw off centering of main nav items

--- a/app/assets/stylesheets/flashcards/common.scss
+++ b/app/assets/stylesheets/flashcards/common.scss
@@ -12,9 +12,6 @@ html {
 }
 
 .navbar {
-  .menu-spacer {
-    width: 160px;
-  }
   .navbar-title {
     font-size: 1.4em;
     @media screen and (max-width: $navbar-breakpoint) {
